styles.css
body, html{
  height:100%;
}
body{
  margin: 0px;
  background-color:#444;
  font-size: 18px;
}
body, a:link, a:visited, a:active{
  color: lightblue;
}
.title, .addDancerButton{
  padding:5px 12px;
  float:right;
}
.topbar{
  height:32px;
  background-color: #555;
}
.title{
  background-color: #777;
}
.dancer{
  border:10px solid red;
  border-radius:10px;
  position:absolute;
}
.lineUp{
  top: 50%;
}

